<resources>
    <string name="app_name">LR23</string>
    <string name="to_label">Кому:</string>
    <string name="email_hint">Введите email адрес</string>
    <string name="subject_hint">Тема</string>
    <string name="message_hint">Сообщение</string>
    <string name="send_button">Отправить</string>
    <string name="button_2">BUTTON 2</string>
    <string name="button_1">BUTTON 1</string>
    <string name="button_3">BUTTON 3</string>
</resources>